fix(home): Add gap between elements and update version This commit message addresses the following: *   **Type:** `fix` (indicates a bug fix or small improvement) *   **Scope:** `home` (specifies the area of the code affected) *   **Description:**  Add gap between elements  refers to the addition of `gap: 44px;` in the `home.module.css` file.  and update version  refers to the version update in `package.json` and `package-lock.json`.

--- a/public/css/home.module.css
+++ b/public/css/home.module.css
@@ -18,6 +18,7 @@ body {
 }
 .area-wrapper {
   display: flex;
+  gap: 44px;
   justify-content: space-between;
   padding: 25px 44px;
 }
@@ -29,7 +30,6 @@ body {
 }
 .area-wrapper .area-arrival {
   flex: 2;
-  
 }
 .area-wrapper .area-arrival .arrival-list {
   display: flex;
